# deque_in_array

./: .gitignore  CMakeLists.txt  compile.sh  demo.c  deque.c  deque.h  main.c
include/: deque.h
src/: deque.c
